--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,9 @@
 /* Es una pagina oficial de Google, asi que mas seguro imposible */
 /* https://fonts.google.com/ */
 
+/* SI QUIERES CAMBIAR EL COLOR PUEDES UTILIZAR ESTA PAGINA, */ /* https://htmlcolorcodes.com/es/ */
+/* CUANDO TENGAS EL COLOR QUE QUIERES APLICAR COPIA EL ID OBTENIDO EN FORMATO HEXADECIMAL Y SUSTITUYELO EN EL LUGAR CORRESPONDIENTE: #123456 */
+
 /* IMPORTANTE *//* Cuando se importe un elemento, siempre colocarlo arriba */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap'); 
 
